test(all): add all test cases
- Added all test cases for every componenet
- Added a common redux store for testing purpose
- Modified jest configuration to transform files and mapping modules
- Added data-testid to al the components to find in test cases
- Aligned the styles in css files

--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
